tests-build/tests/fail/net_without_uds_missing_uds.rs
use tests_build::tokio_net::uds;

fn main() {}

